# QuantTrading

./: .env.example  .gitignore  AUDIT_REPORT.md  Audit-report.md  BACKEND_CORE_AUDIT_REPORT.md  BACKEND_DEEP_AUDIT_REPORT.md  BOTTLENECK_VERIFICATION.md  COMPREHENSIVE_AUDIT_REPORT.md  DEEP_AUDIT_REPORT.md  Dockerfile  FINAL_AUDIT_REPORT.txt  FINAL_LIVE_TRADING_READINESS_REPORT.md  HFT_AUDIT_REPORT.md  INSTITUTIONAL_AUDIT_REPORT.md  INTEGRATION_SYNC_AUDIT_REPORT.md  LIVE_TRADING_AUDIT_REPORT.md  LIVE_TRADING_VERIFICATION_REPORT.md  PERFORMANCE_BOTTLENECK_REPORT.md  README.md  SRC_ARCHITECTURE_AUDIT.md  SYNC_AUDIT_REPORT.md  api.py  api_comprehensive.py  api_sync.py  app.py  backtest_astro.py  data.csv  debug_test_conflict.py  docker-compose.yml  download_historical_data.py  download_mt5_data.py  fix_astro_dan_validate.py  generate_btcusd_signals.py  get_data.py  live_trading.py  live_trading_readiness_report.json  package-lock.json  pyproject.toml  requirements.txt  requirements_enhanced.txt  (+18 more)
agent/: BACKEND_VERIFICATION_ID.md  FINAL_VERIFICATION_REPORT.md  FOLDER_VERIFICATION.md  FRONTEND_BACKEND_SYNC.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  SETTINGS_AI_IMPLEMENTATION_REPORT.md  SYNC_ANALYSIS.md  VERIFICATION_CHECKLIST.md  __init__.py  agent_orchestrator.py  analyst_agent.py  autonomous_agent.py  optimizer_agent.py  regime_agent.py
backtest/: __init__.py  backtester.py  forecasting_evaluator.py  metrics.py  optimizer.py
config/: .env.example  Candlestick_Pattern.yaml  alerts_config.yaml  astro_config.yaml  backtest_config.yaml  bookmap_config.yaml  broker_config.yaml  (+17 more)
rust_engine/: Cargo.toml  Dockerfile  README.md
rust_engine/src/: main.rs
rust_engine/src/execution/: mod.rs
rust_engine/src/ipc/: mod.rs
rust_engine/src/orderbook/: mod.rs
rust_engine/src/risk/: mod.rs
(+418 files in other folders)
