[tool.poetry]
name = "gann_quant_ai"
version = "0.1.0"
description = "A comprehensive algorithmic trading system based on Gann, Astro, and Ehlers principles."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.3"
scipy = "^1.10.0"
pyyaml = "^6.0"
yfinance = "^0.2.12"
python-binance = "^1.0.17"
MetaTrader5 = "^5.0.45"
oandapyV20 = "^0.7.2"
scikit-learn = "^1.2.1"
tensorflow = "^2.11.0"
xgboost = "^1.7.3"
optuna = "^3.1.0"
streamlit = "^1.19.0"
plotly = "^5.13.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
skyfield = "^1.45"
pyephem = "^4.1.4"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
